; ModuleID = '/home/carl/AnghaBench/reactos/base/setup/usetup/extr_cmdcons.c_ClearCommandLine.c'
source_filename = "/home/carl/AnghaBench/reactos/base/setup/usetup/extr_cmdcons.c_ClearCommandLine.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64, i32, i32)* @ClearCommandLine to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ClearCommandLine(i32 %0, i64 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  store i32 %0, i32* %6, align 4
  store i64 %1, i64* %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %11 = load i32, i32* %8, align 4
  %12 = load i32, i32* %9, align 4
  %13 = call i32 @CONSOLE_SetCursorXY(i32 %11, i32 %12)
  store i64 0, i64* %10, align 8
  br label %14

14:                                               ; preds = %21, %4
  %15 = load i64, i64* %10, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i64 @strlen(i32 %16)
  %18 = icmp slt i64 %15, %17
  br i1 %18, label %19, label %24

19:                                               ; preds = %14
  %20 = call i32 @CONSOLE_ConOutChar(i8 signext 32)
  br label %21

21:                                               ; preds = %19
  %22 = load i64, i64* %10, align 8
  %23 = add nsw i64 %22, 1
  store i64 %23, i64* %10, align 8
  br label %14

24:                                               ; preds = %14
  %25 = load i32, i32* %6, align 4
  %26 = load i64, i64* %7, align 8
  %27 = call i32 @memset(i32 %25, i32 0, i64 %26)
  %28 = load i32, i32* %8, align 4
  %29 = load i32, i32* %9, align 4
  %30 = call i32 @CONSOLE_SetCursorXY(i32 %28, i32 %29)
  %31 = load i32, i32* %5, align 4
  ret i32 %31
}

declare dso_local i32 @CONSOLE_SetCursorXY(i32, i32) #1

declare dso_local i64 @strlen(i32) #1

declare dso_local i32 @CONSOLE_ConOutChar(i8 signext) #1

declare dso_local i32 @memset(i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
